--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -41,3 +41,15 @@
 .Submit_button:hover{
      background-color: red;
 }
+.Background{
+    margin-top: 0%;
+    padding: 0%;
+    height: 810px;
+    width: 1530px;
+    position: absolute;
+    background-color: hsl(236, 76%, 74%);
+    
+
+
+
+}
