--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -47,7 +47,7 @@
     height: 810px;
     width: 1530px;
     position: absolute;
-    background-color: hsl(236, 76%, 74%);
+    background-color: #49108b;
     
 
 
