--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,4 +1,5 @@
 .login_page{
+
     height: 400px;
     width: 40%;
     border: 2px solid black;
@@ -12,34 +13,54 @@
     background-color: #32344d9c; 
 }
 .login_form{
+    padding: 10px;
     height:300px;
     width: 60%;
     background-color: #ecedfea3 ;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
     box-shadow:  4px 4px 4px 4px #00000040;
 }
 .input_box{
     width:80%;
     margin: 5px 0 0 30px;
+    height: 150px;
+    border-radius: 5px;
+    border-width: 0;
+}
+.input_box:hover{
+    border-width: 2px;
+    border-color: hsl(236, 61%, 54%);
 }
 .login_through{
     width: 50%;
+    height:200px;
+    margin-bottom: 5px;
+    border-radius: 10px;
+    border-width: 0px;
     margin-left: 27%;
+    font-weight: 700;
 }
 .login_through:hover{
-    color:hsl(236, 95%, 50%) ;
+    color:hsl(236, 61%, 54%) ;
+    border-width: 2px;
+    border-color: hsl(236, 61%, 54%);
 }
 .Submit_button{
-    height: 30px;
-    width: 40%; 
+    height: 200px !important;
+    width: 40% !important; 
     margin-left: 30%;
-    background-color: hsl(237, 52.90%, 69.20%);
+    background-color: hsl(214, 64%, 57%) !important;
+    border-radius: 10px;
+    border-width: 0px;
+    font-weight: 600;
+    font-size: large;
 }
 .Submit_button:hover{
-     background-color: red;
+     background-color: rgb(106, 83, 210) !important;
+     border-width: 2px;
 }
 .Background{
     margin-top: 0%;
